--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,17 +1,34 @@
 :root {
   --color-primary: hsl(0, 91%, 71%);
+  --color-text: hsl(240, 5%, 26%);
+  --color-text-subtle: hsl(240, 4%, 46%);
+
+  --font-size-XL: 32px;
+  --font-size-L: 24px;
+  --font-size-M: 16px;
+  --font-size-S: 14px;
+
+  --font-weight-bold: 700;
+  --font-weight-regular: 400;
+
+  --spacing-L: 40px;
+  --spacing-M: 20px;
+  --spacing-S: 10px;
 }
 
 body {
   font-family: 'Montserrat', sans-serif;
-  font-size: 16px;
+  font-size: var(--font-size-M);
+  line-height: 1.4;
+  font-weight: var(--font-weight-regular);
 }
 
-h1 {
-  font-size: 32px;
-  color: var(--color-primary);
+h1,
+h2,
+h3 {
+  margin: 0;
 }
 
-h2 {
-  font-size: 24px;
+p {
+  margin: var(--spacing-M) 0;
 }
